Add some relevant references to the scope section.

--- a/paper1/biblio.bib
+++ b/paper1/biblio.bib
@@ -174,3 +174,43 @@
 	Booktitle = {Proc. of Workshop on the Evaluation of Software Defect Detection Tools},
 	Title = {Using a diagnostic corpus of C programs to evaluate buffer overflow detection by static analysis tools},
 	Year = {2005}}
+
+@INPROCEEDINGS{Ganesh:2009,
+        author = {Vijay Ganesh and Tim Leek and Martin Rinard},
+        title = {Taint-based directed whitebox fuzzing},
+        booktitle = {ICSE ’09: Proceedings of the 31st International Conference on Software Engineering},
+        year = {2009}}
+
+@INPROCEEDINGS{Wang:2010,
+        author={Tielei Wang and Tao Wei and Guofei Gu and Wei Zou},
+        booktitle={IEEE Symposium on Security and Privacy},
+        title={TaintScope: A Checksum-Aware Directed Fuzzing Tool for Automatic Software Vulnerability Detection},
+        year={2010}}
+
+@inproceedings {Haller:2013,
+        author = {Istvan Haller and Asia Slowinska and Matthias Neugschwandtner and Herbert Bos},
+        title = {Dowsing for Overflows: A Guided Fuzzer to Find Buffer Boundary Violations},
+        booktitle = {Proceedings of the 22nd USENIX Security Symposium (USENIX Security `13)},
+        year = {2013},
+        publisher = {USENIX}}
+
+@inproceedings{Cadar:2008,
+        author = {Cadar, Cristian and Dunbar, Daniel and Engler, Dawson},
+        title = {KLEE: Unassisted and Automatic Generation of High-coverage Tests for Complex Systems Programs},
+        booktitle = {Proceedings of the 8th USENIX Conference on Operating Systems Design and Implementation},
+        series = {OSDI'08},
+        year = {2008},
+        publisher = {USENIX Association}}
+
+@INPROCEEDINGS{Yamaguchi:2014,
+        author={Yamaguchi, F. and Golde, N. and Arp, D. and Rieck, K.},
+        booktitle={IEEE Symposium on Security and Privacy},
+        title={Modeling and Discovering Vulnerabilities with Code Property Graphs},
+        year={2014}}
+
+@INPROCEEDINGS{Cha:2012,
+        author={Sang Kil Cha and Avgerinos, T. and Rebert, A. and Brumley, D.},
+        booktitle={IEEE Symposium on Security and Privacy},
+        title={Unleashing Mayhem on Binary Code},
+        year={2012}}
+
