--- a/paper1/scope.tex
+++ b/paper1/scope.tex
@@ -1,9 +1,10 @@
 
 We restrict our attention, with LAVA, to the injection of bugs into source code.
 This makes sense given our interest in using it to assemble large corpora for the purpose of evaluating and developing vulnerability discovery techniques and systems.
-Most automated vulnerability discovery systems work with source code, 
-%[References?],
- and we can easily test binary analysis tools by simply compiling the modified source.
+Automated bug discovery systems can work on source
+code~\cite{Cadar:2008, Ganesh:2009, Haller:2013, Yamaguchi:2014} or on
+binaries~\cite{Cha:2012, Wang:2010};
+we can easily test binary analysis tools by simply compiling the modified source.
 Injecting bugs into binaries or byte code directly may also be possible using an approach similar to ours, but we do not consider that problem here.
 We further narrow our focus to Linux open-source software written in C, due to the availability of source code and source rewriting tools.
 As we detail later, a similar approach will work for other languages.
