Spell Ricky's name right and add his email address.

--- a/paper1/paper.tex
+++ b/paper1/paper.tex
@@ -22,13 +22,13 @@
     endorsed by the United States Government.} }
 
 \author{
-\IEEEauthorblockN{Brendan Dolan-Gavitt\IEEEauthorrefmark{1}, Patrick Hulin\IEEEauthorrefmark{2}, Tim Leek\IEEEauthorrefmark{2}, Fredrich Ulrich\IEEEauthorrefmark{2}, Ryan Whelan\IEEEauthorrefmark{2}}
+\IEEEauthorblockN{Brendan Dolan-Gavitt\IEEEauthorrefmark{1}, Patrick Hulin\IEEEauthorrefmark{2}, Tim Leek\IEEEauthorrefmark{2}, Frederick Ulrich\IEEEauthorrefmark{2}, Ryan Whelan\IEEEauthorrefmark{2}}
 \\
 \small (Authors listed alphabetically) \\
 \\
 \IEEEauthorblockA{\IEEEauthorrefmark{1}NYU\\brendandg@nyu.edu}
 \IEEEauthorblockA{\IEEEauthorrefmark{2}MIT Lincoln Laboratory\\
-\{patrick.hulin,tleek,rwhelan\}@ll.mit.edu}
+\{patrick.hulin, tleek, frederick.ulrich, rwhelan\}@ll.mit.edu}
 }
 
 \begin{document}
