--- a/paper1/results.tex
+++ b/paper1/results.tex
@@ -133,7 +133,7 @@ The histogram in Figure~\ref{fig:rdf-hist} quantifies this effect for all potent
 \begin{figure}
 \centering
 \includegraphics[width=3in]{atp.pdf}
-\caption{Normalized DUA trace location}
+\caption{Normalized ATP trace location}
 \label{fig:atp-hist}
 \end{figure}
 
