--- a/paper1/paper.tex
+++ b/paper1/paper.tex
@@ -22,14 +22,17 @@
     endorsed by the United States Government.} }
 
 \author{
-\IEEEauthorblockN{Brendan Dolan-Gavitt\IEEEauthorrefmark{1}, Patrick Hulin\IEEEauthorrefmark{2}, Tim Leek\IEEEauthorrefmark{2}, Frederick Ulrich\IEEEauthorrefmark{2}, Ryan Whelan\IEEEauthorrefmark{2}}
+\IEEEauthorblockN{Brendan Dolan-Gavitt\IEEEauthorrefmark{1}, Patrick Hulin\IEEEauthorrefmark{2}, Engin Kirda\IEEEauthorrefmark{3}, Tim Leek\IEEEauthorrefmark{2}, Andrea Mambretti\IEEEauthorrefmark{3}, \\
+Wil Robertson\IEEEauthorrefmark{3}, Frederick Ulrich\IEEEauthorrefmark{2}, Ryan Whelan\IEEEauthorrefmark{2}}
 \\
 \small (Authors listed alphabetically) \\
 \\
 \IEEEauthorblockA{\IEEEauthorrefmark{1}NYU\\brendandg@nyu.edu}
 \IEEEauthorblockA{\IEEEauthorrefmark{2}MIT Lincoln Laboratory\\
 \{patrick.hulin, tleek, frederick.ulrich, rwhelan\}@ll.mit.edu}
+\IEEEauthorblockA{\IEEEauthorrefmark{1}Northeastern University\\ek@ccs.neu.edu,mbr@ccs.neu.edu, wkr@ccs.neu.edu}
 }
+
 
 \begin{document}
 
