--- a/paper1/paper.tex
+++ b/paper1/paper.tex
@@ -30,7 +30,8 @@ Wil Robertson\IEEEauthorrefmark{3}, Frederick Ulrich\IEEEauthorrefmark{2}, Ryan 
 \IEEEauthorblockA{\IEEEauthorrefmark{1}NYU\\brendandg@nyu.edu}
 \IEEEauthorblockA{\IEEEauthorrefmark{2}MIT Lincoln Laboratory\\
 \{patrick.hulin, tleek, frederick.ulrich, rwhelan\}@ll.mit.edu}
-\IEEEauthorblockA{\IEEEauthorrefmark{1}Northeastern University\\ek@ccs.neu.edu,mbr@ccs.neu.edu, wkr@ccs.neu.edu}
+\IEEEauthorblockA{\IEEEauthorrefmark{3}Northeastern University\\
+\{ek, mbr, wkr\}@ccs.neu.edu}
 }
 
 
