Added some todo statements in bug realism, impl, and altdesign.  Fixed minor typos.

--- a/paper1/biblio.bib
+++ b/paper1/biblio.bib
@@ -14,7 +14,7 @@
 	Date-Modified = {2015-10-09 19:35:25 +0000},
 	Lastchecked = {October 9, 2015},
 	Month = {August},
-	Title = {Tunable Cyber Defnsive Security Mechanisms},
+	Title = {Tunable Cyber Defensive Security Mechanisms},
 	Url = {https://www.sbir.gov/sbirsearch/detail/825791},
 	Year = {2015}}
 
