--- a/paper1/overview.tex
+++ b/paper1/overview.tex
@@ -26,6 +26,7 @@ The pointers \texttt{s} and \texttt{d}, and the buffers pointed to by them are u
 In a little more detail, the first step, in which DUAs are identified, is accomplished as follows.  
 
 The program is executed under a dynamic taint analysis for a specific input.
+\todo[inline]{Ricky: this is the first place we mention taint.  should we define our approach to taint analysis, maybe cite the papers that introduce the taint concepts we employ in LAVA?}
 That taint analysis has a few important features.
 
 \begin{itemize}
