Add one more ref

--- a/paper1/biblio.bib
+++ b/paper1/biblio.bib
@@ -1,12 +1,32 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Patrick Hulin at 2015-10-09 15:37:30 -0400 
+
+%% Created for Brendan Dolan-Gavitt at 2015-11-05 12:05:37 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@inproceedings{Shiraishi:2014,
+	Acmid = {2706360},
+	Address = {Washington, DC, USA},
+	Author = {Shiraishi, Shin'ichi and Mohan, Veena and Marimuthu, Hemalatha},
+	Booktitle = {Proceedings of the 2014 IEEE International Symposium on Software Reliability Engineering Workshops},
+	Date-Added = {2015-11-05 16:40:56 +0000},
+	Date-Modified = {2015-11-05 16:40:59 +0000},
+	Doi = {10.1109/ISSREW.2014.62},
+	Isbn = {978-1-4799-7377-4},
+	Keywords = {static analysis, software assurance, automotive software},
+	Numpages = {4},
+	Pages = {96--99},
+	Publisher = {IEEE Computer Society},
+	Series = {ISSREW '14},
+	Title = {Quantitative Evaluation of Static Analysis Tools},
+	Url = {http://dx.doi.org/10.1109/ISSREW.2014.62},
+	Year = {2014},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1109/ISSREW.2014.62}}
 
 @url{Keromytis:2015,
 	Author = {Keromytis et al.},
@@ -16,7 +36,8 @@
 	Month = {August},
 	Title = {Tunable Cyber Defensive Security Mechanisms},
 	Url = {https://www.sbir.gov/sbirsearch/detail/825791},
-	Year = {2015}}
+	Year = {2015},
+	Bdsk-Url-1 = {https://www.sbir.gov/sbirsearch/detail/825791}}
 
 @inproceedings{S2E,
 	Author = {Chipounov, Vitaly and Kuznetsov, Volodymyr and Candea, George},
@@ -175,42 +196,41 @@
 	Title = {Using a diagnostic corpus of C programs to evaluate buffer overflow detection by static analysis tools},
 	Year = {2005}}
 
-@INPROCEEDINGS{Ganesh:2009,
-        author = {Vijay Ganesh and Tim Leek and Martin Rinard},
-        title = {Taint-based directed whitebox fuzzing},
-        booktitle = {ICSE ’09: Proceedings of the 31st International Conference on Software Engineering},
-        year = {2009}}
+@inproceedings{Ganesh:2009,
+	Author = {Vijay Ganesh and Tim Leek and Martin Rinard},
+	Booktitle = {ICSE '09: Proceedings of the 31st International Conference on Software Engineering},
+	Title = {Taint-based directed whitebox fuzzing},
+	Year = {2009}}
 
-@INPROCEEDINGS{Wang:2010,
-        author={Tielei Wang and Tao Wei and Guofei Gu and Wei Zou},
-        booktitle={IEEE Symposium on Security and Privacy},
-        title={TaintScope: A Checksum-Aware Directed Fuzzing Tool for Automatic Software Vulnerability Detection},
-        year={2010}}
+@inproceedings{Wang:2010,
+	Author = {Tielei Wang and Tao Wei and Guofei Gu and Wei Zou},
+	Booktitle = {IEEE Symposium on Security and Privacy},
+	Title = {TaintScope: A Checksum-Aware Directed Fuzzing Tool for Automatic Software Vulnerability Detection},
+	Year = {2010}}
 
-@inproceedings {Haller:2013,
-        author = {Istvan Haller and Asia Slowinska and Matthias Neugschwandtner and Herbert Bos},
-        title = {Dowsing for Overflows: A Guided Fuzzer to Find Buffer Boundary Violations},
-        booktitle = {Proceedings of the 22nd USENIX Security Symposium (USENIX Security `13)},
-        year = {2013},
-        publisher = {USENIX}}
+@inproceedings{Haller:2013,
+	Author = {Istvan Haller and Asia Slowinska and Matthias Neugschwandtner and Herbert Bos},
+	Booktitle = {Proceedings of the 22nd USENIX Security Symposium (USENIX Security `13)},
+	Publisher = {USENIX},
+	Title = {Dowsing for Overflows: A Guided Fuzzer to Find Buffer Boundary Violations},
+	Year = {2013}}
 
 @inproceedings{Cadar:2008,
-        author = {Cadar, Cristian and Dunbar, Daniel and Engler, Dawson},
-        title = {KLEE: Unassisted and Automatic Generation of High-coverage Tests for Complex Systems Programs},
-        booktitle = {Proceedings of the 8th USENIX Conference on Operating Systems Design and Implementation},
-        series = {OSDI'08},
-        year = {2008},
-        publisher = {USENIX Association}}
+	Author = {Cadar, Cristian and Dunbar, Daniel and Engler, Dawson},
+	Booktitle = {Proceedings of the 8th USENIX Conference on Operating Systems Design and Implementation},
+	Publisher = {USENIX Association},
+	Series = {OSDI'08},
+	Title = {KLEE: Unassisted and Automatic Generation of High-coverage Tests for Complex Systems Programs},
+	Year = {2008}}
 
-@INPROCEEDINGS{Yamaguchi:2014,
-        author={Yamaguchi, F. and Golde, N. and Arp, D. and Rieck, K.},
-        booktitle={IEEE Symposium on Security and Privacy},
-        title={Modeling and Discovering Vulnerabilities with Code Property Graphs},
-        year={2014}}
+@inproceedings{Yamaguchi:2014,
+	Author = {Yamaguchi, F. and Golde, N. and Arp, D. and Rieck, K.},
+	Booktitle = {IEEE Symposium on Security and Privacy},
+	Title = {Modeling and Discovering Vulnerabilities with Code Property Graphs},
+	Year = {2014}}
 
-@INPROCEEDINGS{Cha:2012,
-        author={Sang Kil Cha and Avgerinos, T. and Rebert, A. and Brumley, D.},
-        booktitle={IEEE Symposium on Security and Privacy},
-        title={Unleashing Mayhem on Binary Code},
-        year={2012}}
-
+@inproceedings{Cha:2012,
+	Author = {Sang Kil Cha and Avgerinos, T. and Rebert, A. and Brumley, D.},
+	Booktitle = {IEEE Symposium on Security and Privacy},
+	Title = {Unleashing Mayhem on Binary Code},
+	Year = {2012}}
