made comment in results section a todo

--- a/paper1/results.tex
+++ b/paper1/results.tex
@@ -131,7 +131,8 @@ This would correspond to the worked example in Figure~\ref{fig:worked-example}; 
 No abnormal data flow is required.
 The histogram in Figure~\ref{fig:rdf-hist} quantifies this effect for all potential LAVA bugs, and it is clear that a large fraction have $I(DUA)/I(ATP) \approx 1$, and are therefore highly realistic.
 
-% Should we include some reasonable measure here where we don't turn out so well? Right now the evaluation feels kind of cooked -- we invent some measures and hey, LAVA looks really good under them! So we should a) acknowledge that it's not ideal that we're inventing our own metric for success, and b) we should maybe include something that seems like it would be a nice property, but that LAVA doesn't happen to have -- one that comes to mind is some measure of data flow complexity (rather than favoring flows that are "short" temporally)
+\todo[inline]{Should we include some reasonable measure here where we don't turn out so well? Right now the evaluation feels kind of cooked -- we invent some measures and hey, LAVA looks really good under them! So we should a) acknowledge that it's not ideal that we're inventing our own metric for success, and b) we should maybe include something that seems like it would be a nice property, but that LAVA doesn't happen to have -- one that comes to mind is some measure of data flow
+complexity (rather than favoring flows that are "short" temporally)}
 
 \begin{figure}
 \centering
